Fix text color on mobile buttons on hover

--- a/src/client/styles/btn.css
+++ b/src/client/styles/btn.css
@@ -50,7 +50,7 @@
 
 .btn-question-mobile:hover {
     background-color: white;
-    color: white;
+    color: #2c3e50;
 }
 
 .btn-correct-answer {
